# ───────────── sdk-py/pyproject.toml ─────────────
[tool.poetry]
name         = "mmopdca_sdk"
version      = "1.0.0"
description  = "mmopdca API Python SDK"
authors      = ["gtocue <gtocue510@gmail.com>"]
license      = "MIT"
readme       = "README.md"
repository   = "https://github.com/gtocue/mmopdca"
keywords     = ["OpenAPI", "SDK", "mmopdca"]

# パッケージレイアウト
packages     = [{ include = "mmopdca_sdk" }]
include      = ["mmopdca_sdk/py.typed"]

# ───────────────────────────
# ランタイム依存
# ───────────────────────────
[tool.poetry.dependencies]
python            = ">=3.9,<3.13"
urllib3           = ">=2.1,<3.0"
python-dateutil   = ">=2.8.2"
pydantic          = ">=2,<3"
typing-extensions = ">=4.7.1"

# ★ テスト用に uvicorn を標準 extras 付きで追加
uvicorn           = { version = "^0.30", extras = ["standard"] }

# ───────────────────────────
# 開発依存（poetry install --with dev）
# ───────────────────────────
[tool.poetry.group.dev.dependencies]
pytest                = "^8.3"
pytest-cov            = "^5.0"
flake8                = "^7.0"
mypy                  = "^1.10"
types-python-dateutil = "^2.9"
black                 = "^25"
isort                 = "^6"
ruff                  = "^0.4"

# ───────────────────────────
# extras ― pip install -e .[dev] 用
# ───────────────────────────
[tool.poetry.extras]
dev = [
  "pytest",
  "pytest-cov",
  "flake8",
  "mypy",
  "black",
  "isort",
  "ruff",
  "types-python-dateutil",
  "uvicorn"          # ← パッケージ名のみ（[] を付けない）
]

# ───────────────────────────
[build-system]                # PEP 517
requires      = ["poetry-core>=2.0,<3.0"]
build-backend = "poetry.core.masonry.api"

# ─────────── linters / 型チェック ───────────
[tool.pylint."MESSAGES CONTROL"]
extension-pkg-whitelist = "pydantic"

[tool.mypy]
files                       = ["mmopdca_sdk", "tests"]
python_version              = "3.11"
warn_unused_configs         = true
warn_redundant_casts        = true
warn_unused_ignores         = true
strict_equality             = true
extra_checks                = true
check_untyped_defs          = true
disallow_subclassing_any    = true
disallow_untyped_decorators = true
disallow_any_generics       = true

[[tool.mypy.overrides]]
module = ["mmopdca_sdk.configuration"]
strict = true
