# ───────────── sdk-py/pyproject.toml ─────────────
[tool.poetry]
name         = "mmopdca_sdk"
version      = "1.0.0"
description  = "mmopdca API Python SDK"
authors      = ["gtocue <gtocue510@gmail.com>"]
license      = "MIT"
readme       = "README.md"
repository   = "https://github.com/gtocue/mmopdca"
keywords     = ["OpenAPI", "SDK", "mmopdca"]

# パッケージレイアウト
packages     = [{ include = "sdk" }]
include      = ["sdk/py.typed"]

[tool.poetry.dependencies]
python            = ">=3.9,<3.13"
urllib3           = ">=2.1,<3.0"
python-dateutil   = ">=2.8.2"
pydantic          = ">=2,<3"
typing-extensions = ">=4.7.1"
celery            = "^5.3"
redis             = "^5"
python-dotenv     = "^1.0"
numpy             = "^1.26"
pandas            = "^2.2"
scikit-learn      = "^1.4"
yfinance          = "^0.2"
python-multipart  = "^0.0.6"

# FastAPI multipart/form-data、JSON Schema 検証用パッケージ
python-multipart  = "^0.0.6"
jsonschema        = "^4.19.0"

# テスト用に uvicorn を標準 extras 付きで追加
uvicorn           = { version = "^0.30", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
pytest                = "^8.3"
pytest-cov            = "^5.0"
flake8                = "^7.0"
mypy                  = "^1.10"
types-python-dateutil = "^2.9"
black                 = "^25"
isort                 = "^6"
ruff                  = "^0.4"

[tool.poetry.extras]
dev = [
  "pytest",
  "pytest-cov",
  "flake8",
  "mypy",
  "black",
  "isort",
  "ruff",
  "types-python-dateutil",
  "uvicorn"
]

[build-system]
requires      = ["poetry-core>=2.0,<3.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."MESSAGES CONTROL"]
extension-pkg-whitelist = "pydantic"

[tool.mypy]
files                       = ["sdk", "tests"]
python_version              = "3.11"
warn_unused_configs         = true
warn_redundant_casts        = true
warn_unused_ignores         = true
strict_equality             = true
extra_checks                = true
check_untyped_defs          = true
disallow_subclassing_any    = true
disallow_untyped_decorators = true
disallow_any_generics       = true

[[tool.mypy.overrides]]
module = ["sdk.configuration"]
strict = true
